[gd_scene load_steps=4 format=3 uid="uid://cj7ecgqxbk386"]

[ext_resource type="Texture2D" uid="uid://dnrfxuu3w5gc8" path="res://Resources/Graphics/aoe_textbox.png" id="1_ia5ye"]
[ext_resource type="Script" uid="uid://dvee3i0q62eds" path="res://Scenes/aoe_text_box.gd" id="1_sketh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sketh"]
size = Vector2(451, 357)

[node name="AoeTextBox" type="Area2D"]
z_index = -5
collision_layer = 8
monitorable = false
script = ExtResource("1_sketh")

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(1.5, 1.5)
shape = SubResource("RectangleShape2D_sketh")
disabled = true

[node name="TextBox" type="Sprite2D" parent="."]
texture = ExtResource("1_ia5ye")

[node name="Text" type="RichTextLabel" parent="."]
offset_left = -210.0
offset_top = -168.0
offset_right = 210.0
offset_bottom = 165.0
mouse_filter = 2
text = "Lately, I’ve been working through a sustained bandwidth imbalance due to compounded legacy tasks and ongoing ambiguity around project scope.

There’s been minimal clarity from upstream, and the continued lack of decisioning has made it hard to maintain momentum or even define what “paradigm-shifting success” looks like.

At this point, I’m just trying to remain operationally visible while managing expectations, which I’m not entirely sure have been articulated in the first place.
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_life_timer_timeout"]
